; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_sleh_fiq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_sleh_fiq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@DBG_INTR_TYPE_UNKNOWN = common dso_local global i32 0, align 4
@DBG_INTR_TYPE_TIMER = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@DBG_INTR_TYPE_PMI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sleh_fiq(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @DBG_INTR_TYPE_UNKNOWN, align 4
  store i32 %5, i32* %3, align 4
  %6 = call i64 (...) @ml_get_timer_pending()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @DBG_INTR_TYPE_TIMER, align 4
  store i32 %9, i32* %3, align 4
  br label %10

10:                                               ; preds = %8, %1
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @sleh_interrupt_handler_prologue(i32* %11, i32 %12)
  %14 = call %struct.TYPE_4__* (...) @getCpuDatap()
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %4, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  store i32 -1, i32* %16, align 4
  %17 = load i32, i32* @TRUE, align 4
  %18 = call i32 @rtclock_intr(i32 %17)
  %19 = call i32 (...) @sleh_interrupt_handler_epilogue()
  ret void
}

declare dso_local i64 @ml_get_timer_pending(...) #1

declare dso_local i32 @sleh_interrupt_handler_prologue(i32*, i32) #1

declare dso_local %struct.TYPE_4__* @getCpuDatap(...) #1

declare dso_local i32 @rtclock_intr(i32) #1

declare dso_local i32 @sleh_interrupt_handler_epilogue(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
